force-app/main/default/objects/Slacksettings__c/Slacksettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Slack settings</label>
</CustomObject>