force-app/main/default/objects/Slacksettings__c/fields/Slack_app_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_app_Id__c</fullName>
    <label>Slack app Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>