force-app/main/default/objects/Slacksettings__c/fields/Slack_channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_channel_Id__c</fullName>
    <label>Slack channel Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>