force-app/main/default/objects/Slacksettings__c/fields/Slack_workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_workspace_Id__c</fullName>
    <label>Slack workspace Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>